@@ -84,7 +84,7 @@ tasks {
     }
 
     test {
-        jvmArgs("-XX:-OmitStackTraceInFastThrow", "--add-opens", "java.base/java.lang=ALL-UNNAMED", "--add-opens", "java.base/java.util=ALL-UNNAMED")
+        jvmArgs("-XX:-OmitStackTraceInFastThrow")
     }
 }
 
